<resources>
    <string name="underlined_text">contact@aiforpet.com</string>
    <string name="dog">Dog</string>
    <string name="cat">Cat</string>
    <string name="confirm">Confirm</string>
    <string name="korea">대한민국</string>
    <string name="usa">USA</string>
    <string name="allow_camera_enable_ment">Allow</string>
    <string name="rediagcamera">Try again?</string>
    <string name="rediagcamera_1">Your scan</string>
    <string name="rediagcamera_2">We need</string>
    <string name="camera_loading_title1">Korea\’s first veterinary medical device\nmedical imaging diagnosis assistance software</string>
    <string name="camera_refresh">Start over</string>
    <string name="camera_complete1">Let\'s go find out the health of our pet</string>
    <string name="camera_complete2">To enlarge, tap the picture at the bottom of the screen</string>
    <string name="focus_skin1"><![CDATA[<font color=#fee34c>Align ears within the guide</font> to photo shoot]]></string>
    <string name="focus_skin2"><![CDATA[<font color=#fee34c>Align body within the guide</font> to photo shoot]]></string>
    <string name="focus_skin3"><![CDATA[<font color=#fee34c>Align paws within the guide</font> to photo shoot]]></string>
    <string name="focus_skin4"><![CDATA[<font color=#fee34c>Align other parts within the guide</font> to photo shoot]]></string>
    <string name="focus_skin1_blue"><![CDATA[<font color=#1495f3>Align ears within the guide</font> to photo shoot]]></string>
    <string name="focus_skin2_blue"><![CDATA[<font color=#1495f3>Align body within the guide</font> to photo shoot]]></string>
    <string name="focus_skin3_blue"><![CDATA[<font color=#1495f3>Align paws within the guide</font> to photo shoot]]></string>
    <string name="focus_skin4_blue"><![CDATA[<font color=#1495f3>Align other parts within the guide</font> to photo shoot]]></string>
    <string name="joint_1"><![CDATA[Try to put it in the <font color=#fee34c>shaded region</font>]]></string>
    <string name="joint_2">Rotate your screen</string>
    <string name="joint_3">Eye video sent</string>
    <string name="joint_4">We will inform you after analysis</string>
    <string name="joint_5">Rotate your screen</string>
    <string name="loading_ment_eye_title">Checking the eyes..</string>
    <string name="loading_ment_eye_depth1">Uploading images.</string>
    <string name="loading_ment_eye_depth3">Analyzing for any abnormalities.</string>
    <string name="loading_ment_eye_depth4">Analysis is almost complete.</string>
    <string name="loading_ment_tooth_title">Checking teeth..</string>
    <string name="loading_ment_tooth_depth1">Uploading images.</string>
    <string name="loading_ment_tooth_depth3">Analyzing for any abnormalities.</string>
    <string name="loading_ment_tooth_depth4">Analysis is almost complete.</string>
    <string name="loading_ment_skin_title">Checking the skin..</string>
    <string name="loading_ment_skin_depth1">Uploading images.</string>
    <string name="loading_ment_skin_depth3">Analyzing for any abnormalities.</string>
    <string name="loading_ment_skin_depth4">Analysis is almost complete.</string>
    <string name="diag_ment"><b>SPECIAL CAUTION</b>: The “TTcare” application and other related services, intends to be used for informational purposes only, even if such information may contribute to the general care and well-being of the User\’s pets. It does NOT provide medical advice, opinion, diagnosis, or treatment. It does not replace the advice of qualified healthcare professionals such as User\’s pet\’s veterinarian, nor does it replace the need to have regular checkups or special appointments for User\’s pet\’s health, nor will it work as a medical device. Accordingly, User shall contact qualified healthcare professionals with any questions regarding User\’s pets\’ specific medical condition(s) and seek immediately help from them in case of any emergency situation.</string>
    <string name="diag_ment_1">Even if the same pet is photographed, the check result for abnormal signs may vary depending on the environment, quality and angle.</string>
    <string name="eye_check_1">Photo</string>
    <string name="eye_check_2">Video</string>
    <string name="eye_check_3">User guide</string>
    <string name="eye_check_4">Close</string>
    <string name="pop_skin_1">Please select the area of skin\nyou want to check</string>
    <string name="pop_skin_2">Ear</string>
    <string name="pop_skin_3">Body</string>
    <string name="pop_skin_4">Paws</string>
    <string name="pop_skin_5">Extra Areas</string>
    <string name="pop_skin_6_1">* 최소 한 부위 이상 선택</string>
    <string name="pop_skin_6_2">해야</string>
    <string name="pop_skin_6_3">피부 체크를 할 수 있어요</string>
    <string name="pop_eye_1">Check where?</string>
    <string name="pop_eye_2">Right</string>
    <string name="pop_eye_3">Left</string>
    <string name="pop_eye_4">눈 체크를 할 수 있어요</string>
    <string name="pop_eye_5">Check all parts</string>
    <string name="pop_eye_6">Check selected part</string>
    <string name="pop_eye_7">Check selected part</string>
    <string name="pop_eye_8">* 최소 한 부위 이상 선택</string>
    <string name="pop_eye_9">해야</string>
    <string name="pop_skin_7">Select part</string>
    <string name="pop_skin_9">I will choose all</string>
    <string name="pop_eyeselect_title">Eye check</string>
    <string name="pop_eyeselect_content">All parts will be selected as default when you close the popup without a selection.</string>
    <string name="pop_skinselect_title">Skin check</string>
    <string name="pop_skinselect_content">All parts will be selected as default when you close the popup without a selection.</string>
    <string name="mode_3_close">Close</string>
    <string name="mode_3_re">Select again</string>
    <string name="diag_doctor_title">A word from the veterinarian</string>
    <string name="diags_skin_1">Can\'t analyze</string>
    <string name="diags_skin_2">Not checked</string>
    <string name="skin_ment1">The displayed percentage is the symptom results\nanalyzed by TTcare AI.</string>
    <string name="skin_ment4"><![CDATA[<font color=#525252><b> Probability </b></font>is divided as follows.]]></string>
    <string name="allow_camera_ment">Turn on camera\nto perform a health checkup</string>
    <string name="allow_audio_ment">Click "Allow" for microphone access\nto perform a health checkup</string>
    <string name="allow_storage_ment">Click "Allow" for storage access\nto perform a health checkup</string>
    <string name="guide_1">Check out our video guide</string>
    <string name="guide_2">Eye Check</string>
    <string name="guide_3">Skin Check</string>
    <string name="guide_4">Video</string>
    <string name="guide_5">To learn more on how to use health checks</string>
    <string name="guide_6">Having difficulties checking\nthe eyes?</string>
    <string name="guide_7">Please refer to our user guide for more instructions.</string>
    <string name="guide_8">Go to user guide</string>
    <string name="guide_9">Check later</string>
    <string name="guide_12">Having difficulties checking\nthe dental?</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_confirm">Confirm</string>
    <string name="camera_process_title_ment">Stop health check?</string>
    <string name="camera_process_ment">If you stop now, scanned photos will not be saved and you won\'t be able to view health check results.</string>
    <string name="camera_exit">End</string>
    <string name="camera_process">Continue</string>
    <string name="re_diag_camera">Take again</string>
    <string name="camera_modechange_title">Are you sure you want to change?</string>
    <string name="camera_modechange_content">If you change now, all health check data will be lost.\nDo you want to change it anyway?</string>
    <string name="camera_modechange_yes">Change</string>
    <string name="camera_modechange_no">Cancel</string>
    <string name="auto_camera1_1"><![CDATA[Tap the shutter button below to<br><font color=#fee34c>automatically check starting with the right eye</font>]]></string>
    <string name="auto_camera1_1_blue"><![CDATA[Tap the shutter button below to<br><font color=#1495f3>automatically check starting with the right eye</font>]]></string>
    <string name="auto_camera1_1_1"><![CDATA[Tap the shutter button below to<br><font color=#fee34c>automatically check the right eye</font>]]></string>
    <string name="auto_camera1_1_1_blue"><![CDATA[Tap the shutter button below to<br><font color=#1495f3>automatically check the right eye</font>]]></string>
    <string name="auto_camera1_2"><![CDATA[Tap the shutter button below to<br><font color=#fee34c>automatically check the left eye (opposite)</font>]]></string>
    <string name="auto_camera1_2_blue"><![CDATA[Tap the shutter button below to<br><font color=#75c3ff>automatically check the left eye (opposite)</font>]]></string>
    <string name="auto_camera1_2_1"><![CDATA[Tap the shutter button below to<br><font color=#fee34c>automatically check the left eye</font>]]></string>
    <string name="auto_camera1_2_1_blue"><![CDATA[Tap the shutter button below to<br><font color=#75c3ff>automatically check the left eye</font>]]></string>
    <string name="auto_camera2_1"><![CDATA[Not <font color=#fee34c>dog eyes</font>]]></string>
    <string name="auto_camera2_1_blue"><![CDATA[Not <font color=#75c3ff>dog eyes</font>]]></string>
    <string name="auto_camera2_2"><![CDATA[Not <font color=#fee34c>cat eyes</font>]]></string>
    <string name="auto_camera2_2_blue"><![CDATA[Not <font color=#75c3ff>cat eyes</font>]]></string>
    <string name="auto_camera2_3"><![CDATA[<font color=#fee34c>Human eyes</font> are difficult to analyze]]></string>
    <string name="auto_camera2_3_blue"><![CDATA[<font color=#75c3ff>Human eyes</font> are difficult to analyze]]></string>
    <string name="auto_camera2_4_1"><![CDATA[Scan <font color=#fee34c>dog\'s eyes</font>]]></string>
    <string name="auto_camera2_4_1_blue"><![CDATA[Scan <font color=#75c3ff>dog\'s eyes</font>]]></string>
    <string name="auto_camera2_4_2"><![CDATA[Scan <font color=#fee34c>cat\'s eyes</font>]]></string>
    <string name="auto_camera2_4_2_blue"><![CDATA[Scan <font color=#75c3ff>cat\'s eyes</font>]]></string>
    <string name="auto_camera3_1"><![CDATA[Please <font color=#fee34c>focus</font>]]></string>
    <string name="auto_camera3_2"><![CDATA[<font color=#fee34c>Eyes</font> should be <font color=#fee34c>open</font>]]></string>
    <string name="auto_camera3_3"><![CDATA[Please <font color=#fee34c>part the fur</font> covering the eyes before taking the photo]]></string>
    <string name="auto_camera3_4"><![CDATA[<font color=#fee34c>RED-EYE</font> is difficult to analyze]]></string>
    <string name="auto_camera3_5"><![CDATA[Please <font color=#fee34c>focus</font>]]></string>
    <string name="auto_camera3_1_tooth"><![CDATA[<font color=#fee34c>초점을</font> 잘 맞춰주세요]]></string>
    <string name="auto_camera3_2_tooth"><![CDATA[<font color=#fee34c>눈뜬 상태를</font> 촬영해 주세요]]></string>
    <string name="auto_camera3_3_tooth"><![CDATA[<font color=#fee34c>눈을 가리는 털을</font> 정리 후 촬영해 주세요]]></string>
    <string name="auto_camera3_4_tooth"><![CDATA[Take a <font color=#fee34c>closer</font> picture]]></string>
    <string name="auto_camera3_4_tooth_blue"><![CDATA[Take a <font color=#75c3ff>closer</font> picture]]></string>
    <string name="auto_camera3_5_tooth"><![CDATA[<font color=#fee34c>초점을</font> 잘 맞춰주세요]]></string>
    <string name="auto_camera3_1_blue"><![CDATA[Please <font color=#75c3ff>focus</font>]]></string>
    <string name="auto_camera3_2_blue"><![CDATA[<font color=#75c3ff>Eyes</font> should be <font color=#fee34c>open</font>]]></string>
    <string name="auto_camera3_3_blue"><![CDATA[Please <font color=#75c3ff>part the fur</font> covering the eyes before taking the photo]]></string>
    <string name="auto_camera3_4_blue"><![CDATA[<font color=#75c3ff>RED-EYE</font> is difficult to analyze]]></string>
</resources>