<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pop_eye_selectview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#af000000"
    android:visibility="visible">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="410dp"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/round_radius_20_ffffff">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <RelativeLayout
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="12dp"
                android:layout_alignParentRight="true"
                android:id="@+id/pop_eye_select_no">

                <ImageView
                    android:layout_width="19dp"
                    android:layout_height="19dp"
                    android:background="@drawable/top_close"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="12dp"/>

            </RelativeLayout>

        </RelativeLayout>

        <TextView
            style="@style/Font_Medium_16"
            android:textSize="19dp"
            android:lineHeight="21dp"
            android:textColor="#191919"
            android:layout_height="58dp"
            android:layout_width="match_parent"
            android:text="@string/pop_eye_1"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="83dp"
                    android:layout_height="77dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/common_check_eye_1_no_cat"
                    android:id="@+id/select_eye1"/>

                <TextView
                    style="@style/Font_Medium_16"
                    android:textSize="13dp"
                    android:layout_marginTop="6dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/pop_eye_2"
                    android:textColor="#535353"/>


            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="17dp">


                <ImageView
                    android:layout_width="83dp"
                    android:layout_height="77dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/common_check_eye_2_no_cat"
                    android:id="@+id/select_eye2"/>

                <TextView
                    style="@style/Font_Medium_16"
                    android:textSize="13dp"
                    android:layout_marginTop="6dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/pop_eye_3"
                    android:textColor="#535353"/>


            </LinearLayout>


        </LinearLayout>




        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:id="@+id/pop_eye_all_select">

            <TextView
                style="@style/Font_Regular_13"
                android:text="@string/pop_skin_9"
                android:textColor="#717171"
                android:layout_weight="0"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#717171"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="11dp">

            <TextView
                style="@style/Font_Medium_16"
                android:textSize="13dp"
                android:textColor="#fa535f"
                android:text="@string/pop_eye_8" />

            <TextView
                style="@style/Font_Regular_13"
                android:text="@string/pop_eye_9"
                android:textColor="#717171"/>


        </LinearLayout>

        <TextView
            style="@style/Font_Regular_13"
            android:text="@string/pop_eye_4"
            android:textColor="#717171"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"/>


        <TextView
            style="@style/Font_Medium_16"
            android:textSize="15dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="15dp"
            android:textColor="#ffffff"
            android:text="@string/pop_skin_7"
            android:background="@drawable/round_radius_10_d3d3d3"
            android:id="@+id/pop_eye_select_yes"/>







    </LinearLayout>




</RelativeLayout>
